--- a/package.json
+++ b/package.json
@@ -25,5 +25,5 @@
   "bugs": {
     "url": "https://github.com/santiagopintus/wdd330readings/issues"
   },
-  "homepage": "https://github.com/santiagopintus/wdd330readings#readme"
+  "homepage": "https://santiagopintus.github.io/wdd330readings/"
 }
